--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"require" : {
         "silex/silex": "^2.0@dev",
         "quazardous/silex-pack": "*@dev",
+        "quazardous/silex-user-pack": "*@dev",
         "twig/twig" : "^1.8",
         "symfony/twig-bridge": "^3.0",
         "dflydev/doctrine-orm-service-provider": "^2.0",
