--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
         "quazardous/silex-pack": "*@dev",
         "quazardous/silex-user-pack": "*@dev",
         "twig/twig" : "^1.8",
-        "symfony/twig-bridge": "^3.0",
+        "symfony/twig-bridge": "^3.0", 
         "dflydev/doctrine-orm-service-provider": "^2.0",
         "doctrine/migrations" : "*@dev",
         "doctrine/data-fixtures" : "^1.0@dev",
@@ -12,8 +12,9 @@
         "quazardous/silex-migration": "*@dev",
         "mheap/Silex-Assetic": "*@dev",
         "packagist/yuicompressor-bin": "^2.4",
+        "symfony/config": "^3.0",
         "symfony/translation": "^3.0",
-        "symfony/twig-bridge": "^3.0"
+        "monolog/monolog": "^1.17"
 	},
 	"autoload" : {
 		"psr-4" : {
