--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
 		"psr-4" : {
 			"Acme\\" : "src/Acme/"
 		}
-	}
+	},
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
